@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-03-07T00:42:11Z",
-  "count_outdated" : 245665,
-  "uniques_outdated" : 2456,
-  "count" : 247449,
-  "uniques" : 2483,
+  "timestamp" : "2025-03-08T00:33:11Z",
+  "count_outdated" : 245794,
+  "uniques_outdated" : 2458,
+  "count" : 247576,
+  "uniques" : 2485,
   "clones" : [
     {
-      "timestamp": "2025-02-21T00:00:00Z",
-      "count": 109,
-      "count_minmax": [ 109, 129 ],
-      "count_decinc": [ 20, 129 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
       "timestamp": "2025-02-22T00:00:00Z",
-      "count": 129,
-      "count_minmax": [ 129, 129 ],
-      "count_decinc": [ 0, 129 ],
+      "count": 108,
+      "count_minmax": [ 108, 129 ],
+      "count_decinc": [ 21, 129 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2025-03-06T00:00:00Z",
+      "count": 127,
+      "count_minmax": [ 127, 127 ],
+      "count_decinc": [ 0, 127 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-03-07T00:00:00Z",
       "count": 127,
       "count_minmax": [ 127, 127 ],
       "count_decinc": [ 0, 127 ],
