@@ -1,3 +1,12 @@
+2025-03-08T00:33:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13731879636 # 587
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-08
+* notice: last 14d: unq all: 4 1761
+* notice: prev accum: outdated-unq outdated-all / unq all: 2456 245665 / 2483 247449
+* notice: next accum: outdated-unq outdated-all / unq all: 2458 245794 / 2485 247576
+* notice: prev exec diff / last date diff / accum: unq all: +2 +127 -0 -21 / +2 +127 -0 -0 / 2 127
+* notice: removed / changed dates: [2025-02-21] / [2025-02-22 2025-03-07]
+
 2025-03-07T00:42:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13711179141 # 586
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-07
